# deep_learned_visual_features

./: .gitmodules  README.md  environment.yml  get_run_stats.py  match_features.py  requirements.txt  run_pipeline.py  setup.cfg
_test/: config.json  config_sdpr.json  config_svd.json  config_test.json  config_vgg16.json  test_pipeline.py  test_pose_est.py  test_svd_sdpr.py
config/: TRO_test_baseline.json  TRO_test_lieopt.json  TRO_test_sdp.json  TRO_test_sdp_sdpRansac.json  data.json  data_min_dist.json  data_min_dist_small.json  data_small.json  test.json  test_baseline.json  test_sdpr_v1.json  test_sdpr_v2.json  test_sdpr_v3.json  test_sdpr_v4.json  test_svd.json  test_svd_v2.json  test_svd_v4.json  train.json  train_check_pipeline.json  train_check_pipeline_sdpr.json  train_check_pipeline_svd.json  train_vgg16_sdpr.json  train_vgg16_sdpr_v2.json  train_vgg16_sdpr_v3.json  train_vgg16_svd_v1.json
data/: build_datasets.py  build_train_test_dataset_loc.py  sample_data.py
src/: dataset.py  test.py  train.py
src/model/: lieopt_block.py  loc_block.py  matcher_block.py  pipeline.py  ransac_block.py  sdpr_block.py  svd_block.py  unet.py
src/utils/: keypoint_tools.py  statistics.py  stereo_camera_model.py
visualization/: plots.py
