[metadata]
name = src
version = 0.0.1
authors = [
    {name = "Connor Holmes", email = "connor.holmes@mail.utoronto.ca" },]
description = deep learning features based on monas work
long_description = file : README.md
long_description_content_type = text/markdown
readme = "README.md"
license = { file="LICENSE" }

[project.urls]
"Homepage" = "https://github.com/holmesco/"

# Below is for autodiscovery
[options]
package_dir=
    =.
packages=find:
[options.packages.find]
where=.
exclude=
    data*

[tool:pytest] # check how much of the codebase is covered/tested
addopts = --cov=hello 

[flake8]
ignore = W292, W391, F541, F841, W503, E203
exclude = notebooks/*, *.ipynb_checkpoints*
max-line-length = 99